# bubbling_firebase_authentication

./: README.md  setup.cfg  setup.py
bubbling_firebase_authentication/: __init__.py  apps.py  authentication.py  firebase_anonymous_permissions.py  mixins.py  settings.py  tests.py
docs/: PACKAGE_AND_INSTALL.md  README.md
sample_server/: app.js  package-lock.json  package.json  request.http
